fixed logo flicker when tapping hamburger

--- a/techWrench/src/app/components/navbar.module.css
+++ b/techWrench/src/app/components/navbar.module.css
@@ -69,7 +69,7 @@
 
     .mobileMenu {
         position: absolute;
-        top: 100%;
+        top: 99%;
         left: 0;
         width: 100%;
 
@@ -81,6 +81,22 @@
 
         z-index: 150;
     }
+
+    /* 
+    .mobileMenu {
+        position: fixed;
+        top: 75px;
+        left: 0;
+        width: 100%;
+        z-index: 999;
+
+        background: white;
+
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        padding: 2rem;
+    } */
 
     .mobileMenu li {
         width: 100%;
